[project]
name = "asset-tracker"
version = "0.1.0"
description = "Personal side-project + income registry"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
asset-tracker = "asset_tracker.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["asset_tracker*"]
