[project]
name = "asset-tracker"
version = "0.2.2"
description = "Personal side-project + income registry"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
asset-tracker = "asset_tracker.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["asset_tracker*"]
